<resources>
    <string name="app_name">Naiie</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="address_hint">Address</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <string name="b_login">If you are Barber?Login here.</string>
    <string name="c_login">Are you looking for barber?Login here.</string>


    <!--  Add Standard into spinner-->
    <string name="select">Select Executive Name</string>
    <string name="Anand">Anand</string>
    <string name="Dinesh">Dinesh</string>
    <string name="Swapnil">Swapnil</string>

    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="generate_otp">Generate OTP</string>

    <!-- bottom navigation text -->

    <string name="title_home">Home</string>
    <string name="title_service">Service</string>
    <string name="title_booking">Booking</string>
    <string name="title_profile">Profile</string>
    <string name="city_name">City Name</string>
    <string name="pincode">Pincode</string>

</resources>
